2015-03-05  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* square-table/square-table-tests.lisp (:table-dev): Fixed bug
	where I was refering to obsoletet schema classes

	* square-table/square-table-storage.lisp (:table-dev): Fixed bug
	where I was refering to obsolete schema classes

	* mv-table.asd (#:mv-table): Added missing files

2015-03-02  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* init/clos-interface.lisp (1d-schema): Added `title' slot to the
	schema

2015-02-26  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* init/clos-interface.lisp (table-ref): Renamed table-value to
	table-ref, following cl:aref

2015-02-22  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* mv-table.asd: Started writing square table.  Leaving only the
	necessary stuff for it, trying not to go to general

2014-07-16  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* doc/user-doc/mv-table-user-documentation.org: Added
	specification that we do not honor multiple column specifications,
	but only the last one.

	* init/column-table-package-def.lisp (#:column-table): New file,
	new package for colum-table.  This package serves as a proof of
	concept.

	* init/table-dev-package-def.lisp (#:table-dev): New package for
	internal table development code

	* init/utilities.lisp (:table-dev): Moved to :table-dev package

	* mv-table.asd (#:mv-table): Focusing on column-table.  Commented
	out all un-necessary modules and files

2014-04-05  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* doc/user-doc/mv-table-user-documentation.org: Replacied word
	curtain with word column

 