@@ -5,25 +5,29 @@
 
 
 (defun canonicalize-option (option)
-  "Return option in correct format.  Signal error for unrecognized
-options
+  "Do some checks and return option in correct format.  Signal error for unrecognized or illegal options.
+
+We check that options have values
+We check that there are no duplicate options
+We check that :metaclass has not been specified
+We pass through unrecognized options
 
 This is a top-level function that calls a few helper functions to do
 its job"
   (let* ((option-name (car option))
-	 (option-value
-	  (let ((value (cadr option)))
-	    (assert value ()
+	 (option-values
+	  (let ((values (cdr option)))
+	    (assert values ()
 		    (error 'table-option-missing-value :option-name option-name))
-	    value)))
+	    values)))
     (check-duplicate-option option-name)
     (let ((table-option-maybe
-	   (canonicalize-deftable-option option-name option-value)))
+	   (apply #'canonicalize-deftable-option option-name option-values)))
       (if table-option-maybe table-option-maybe
 	  (let ((class-option-maybe
-		 (canonicalize-defclass-option option-name option-value)))
+		 (apply #'canonicalize-defclass-option option-name option-values)))
 	    (if class-option-maybe class-option-maybe
-		(error 'illegal-table-option :name option-name)))))))
+		`(,option-name ,@option-values)))))))
 		 
 		 
 
@@ -34,7 +38,7 @@ its job"
       (error 'duplicate-table-option :option-name option-name) 
       (push option-name options-seen)))
 
-(defun canonicalize-deftable-option (option-name option-value)
+(defun canonicalize-deftable-option (option-name &rest option-values)
   "Check table options and bring them to correct form.  Return NIL if
   not a table-option"
     (macrolet ((assert-function ()
@@ -43,24 +47,24 @@ its job"
 				 :option-name option-name))))
       (case option-name
 	(:value-type 
-		     `(:value-type ,option-value))
-	(:value-normalizer (assert-function)
-	 `(:value-normalizer ,option-value))
-	(:equality-predicate (assert-function)
-			     `(:equality-predicate ,option-value))
-	(:comparator (assert-function)
-	 `(:comparator ,option-value))
+		     `(:value-type ,(car option-values)))
+	(:value-normalizer #+skip(assert-function)
+	 `(:value-normalizer ,(car option-values)))
+	(:equality-predicate #+skip(assert-function)
+			     `(:equality-predicate ,(car option-values)))
+	(:comparator #+skip(assert-function)
+	 `(:comparator ,(car option-values)))
 	(:default-value 
-	 `(:default-value ,option-value))
+	 `(:default-value ,(car option-values)))
 	(:adjustable 
-	 `(:adjustable ,option-value))
+	 `(:adjustable ,(car option-values)))
 	(t nil))))
 
 (define-test canonicalize-deftable-option
   "Spot check of the functions main operation"
   (assert-equal '(:value-type integer)
 		(canonicalize-deftable-option :value-type 'integer))
-  (assert-error 'table-option-not-function
+  #+skip(assert-error 'table-option-not-function
 		(canonicalize-deftable-option :comparator t))
   (assert-true
 		(canonicalize-deftable-option :comparator
@@ -68,28 +72,27 @@ its job"
 						t))))
 
 
-(defun canonicalize-defclass-option (option-name option-value)
+(defun canonicalize-defclass-option (option-name &rest option-values)
   "Process class options:
 - :metaclass is not allowed and we signal an error
 - :default-initargs is not handled, we signal an error.  This needs to
   be fixed in a sensible manner by incorpoating ccl code
 - :documentation is handled"
-    (case option-name
-      (:default-initargs
-       (error 'illegal-table-option :option-name option-name))
-      (:metaclass
-       (error 'illegal-table-option :option-name option-name))
-      (:documentation
-       `(:documentation ,option-value))
-      (t nil)))
+  (case option-name
+    (:metaclass (error 'illegal-table-option :option-name option-name))
+    #+skip(:default-initargs `(:default-initargs ,@option-values))
+    (t `(,option-name ,@option-values))))
 
 (define-test canonicalize-defclass-option
-  (define-test canonicalize-defclass-option
-  (assert-error 'illegal-table-option
-		(canonicalize-defclass-option :default-initargs 'foo))
   (assert-error 'illegal-table-option
 		(canonicalize-defclass-option :metaclass 'foo))
-  (assert-true (canonicalize-defclass-option :documentation "text"))))
+  (assert-equal '(:documentation "text")
+		(canonicalize-defclass-option :documentation "text"))
+  (assert-equal '(:default-initargs
+		  :slot0 val0
+		  :slot1 val1)
+		(apply #'canonicalize-defclass-option :default-initargs
+		       '(:slot0 val0 :slot1 val1))))
 
 
 (define-test canonicalize-option
@@ -110,6 +113,13 @@ its job"
 			  (:documentation "text")
 			  (:default-value 4))
 			options-seen nil)
+		  (mapcar #'canonicalize-option table-options-1)))
+  (assert-error 'illegal-table-option
+		(progn
+		  (setf table-options-1
+			'((:default-value 3)
+			  (:metaclass 'foo))
+			options-seen nil)
 		  (mapcar #'canonicalize-option table-options-1))))
 
 
@@ -126,12 +136,12 @@ its job"
 
 
 (defun canonicalize-table-slot (slot)
-  (declare (special options-seen))
+  (declare (special slot-options-seen))
   (destructuring-bind (slot-name &rest slot-options) slot
     (assert slot-name ()
 	    (error 'illegal-table-slot-name :slot-name slot-name))
-    (check-duplicate-slot slot-name)
-    (setf options-seen nil)
+    #+clos-does-not-handle-duplicate-slots(check-duplicate-slot slot-name)
+    (setf slot-options-seen nil)
     (do* ((options slot-options (cddr options))
 	  (option-name (car options) (car options)))
 	((null options))
@@ -142,22 +152,24 @@ its job"
     (destructuring-bind (slot-name &rest slot-options) slot
       (canonicalize-table-slot-by-name slot-name slot-options))))
 
-(defun check-duplicate-slot (slot-name)
+;; we leave to CLOS to handle duplicate slots
+#+skip(defun check-duplicate-slot (slot-name)
   "Check for duplicate slots in slots-seen"
   (declare (special slots-seen))
   (if (member slot-name slots-seen :test #'eq)
       (error 'duplicate-table-slot :slot-name slot-name) 
       (push slot-name slots-seen)))
 
+;; we leave to CLOS to handle duplicate slot-options
 (defun check-duplicate-slot-option (option-name slot-name)
   "Check for duplicate slots in slots-seen"
-  (declare (special options-seen))
-  (if (member option-name options-seen :test #'eq)
+  (declare (special slot-options-seen))
+  (if (member option-name slot-options-seen :test #'eq)
       (error 'duplicate-table-slot-option :slot-name slot-name
 	     :slot-option-name option-name) 
-      (push option-name options-seen)))
+      (push option-name slot-options-seen)))
 
-(defun canonicalize-table-slot-by-name (name options)
+#+obsolete(defun canonicalize-table-slot-by-name (name options)
   "Canonicalize table slot"
   (unless (or (eql name 'row-labels-schema)
 	      (eql name 'col-labels-schema))
@@ -182,52 +194,69 @@ its job"
 				     :slot-name name
 				     :slot-option-name option-name
 				     :slot-option-value option-value))))
+	  (print option-name)
+	  (print option-value)
+	  (print (type-of option-value))
 	  (case option-name
 	    (:names (setf names option-value))
 	    (:value-type (setf value-type option-value))
-	    (:value-normalizer (assert-function) (setf value-normalizer option-value))
-	    (:equality-predicate (assert-function) (setf equality-predicate
+	    (:value-normalizer #+skip(assert-function) (setf value-normalizer option-value))
+	    (:equality-predicate #+skip(assert-function) (setf equality-predicate
 							 option-value))
-	    (:comparator (assert-function) (setf comparator option-value))
+	    (:comparator #+skip(assert-function) (setf comparator option-value))
 	    (:default-value (setf default-value option-value))
 	    (:adjustable (setf adjustable option-value))
 	    (t (error 'illegal-table-slot-option))))))
-    `(:name ,name
-	     :names ',names
-	     ,@(when value-type `(':value-type ',value-type))
-	     ,@(when value-normalizer `(':value-normalizer ',value-normalizer))
-	     ,@(when equality-predicate `(':equality-predicate ',equality-predicate))
-	     ,@(when comparator `(':comparator ',comparator))
-	     ,@(when default-value `(':default-value ',default-value))
-	     ,@(when adjustable `(':adjustable ,adjustable)))))
+    `(,name
+      :names ',names
+      ,@(when value-type `(:value-type ,value-type))
+      ,@(when value-normalizer `(:value-normalizer ,value-normalizer))
+      ,@(when equality-predicate `(:equality-predicate ,equality-predicate))
+      ,@(when comparator `(:comparator ,comparator))
+      ,@(when default-value `(:default-value ,default-value))
+      ,@(when adjustable `(:adjustable ,adjustable)))))
+
+
+(defun canonicalize-table-slot-by-name (name options)
+  "Canonicalize table slot"
+  (when (or (eql name 'row-labels-schema)
+	      (eql name 'col-labels-schema))
+    (assert (find :names options) ()
+	    (error 'missing-table-slot-option :slot-option-name :names
+		   :slot-name name)))
+  `(,name ,@options))
 
 (define-test canonicalize-table-slot-by-name
-  (assert-error 'illegal-table-slot-name
-		(canonicalize-table-slot-by-name 'foo
-				   (list :options)))
+  (assert-equal '(row-labels-schema :names (a b c))
+		(canonicalize-table-slot-by-name
+		 'row-labels-schema (list :names '(a b c))))
+  (assert-equal '(row-labels-schema :names (a b c) :default-value 3.14)
+		(canonicalize-table-slot-by-name
+		 'row-labels-schema
+		 '(:names (a b c)
+		   :default-value 3.14)))  
+  (assert-error 'missing-table-slot-option
+		(canonicalize-table-slot-by-name
+		 'row-labels-schema (list :name '(a b c))))
   #+not-implemented(assert-error 'missing-table-slot-option-value 
 		(canonicalize-table-slot-by-name
 		 'row-labels-schema
 		 '((:names (a b c))
 		   (:default-value))))
-  (assert-error 'illegal-table-slot-option-value
-		(canonicalize-table-slot-by-name
-		 'row-labels-schema
-		 '((:names (a b c))
-		   (:default-value 3.14)
-		   (:equality-predicate 2.71))))
-  (assert-equal '(LIST ':NAME 'ROW-LABELS-SCHEMA ':NAMES '(A B C) ':DEFAULT-VALUE '3.14)
+  #+not-implemented(assert-error 'illegal-table-slot-option-value
 		(canonicalize-table-slot-by-name
 		 'row-labels-schema
 		 '(:names (a b c)
-		   :default-value 3.14))))
+		   :default-value 3.14
+		   :equality-predicate 2.71)))
+)
   
 (define-test canonicalize-table-slot
   (declare (special slots-seen))
-  (assert-equal '(LIST ':NAME 'ROW-LABELS-SCHEMA ':NAMES '(A B C) ':DEFAULT-VALUE '3.14)
+  (assert-equal '(row-labels-schema :names (a b c) :default-value 3.14)
 		(progn
 		  (setf slots-seen nil)
-		  (canonicalize-table-slot '(row-labels-schema :names (abc)
+		  (canonicalize-table-slot '(row-labels-schema :names (a b c)
 					     :default-value 3.14))))
   (assert-error 'duplicate-table-slot-option
 		(progn
@@ -243,7 +272,7 @@ its job"
 (defmacro def-square-table (table-name table-supers slots
 			    &rest table-options
 			    &environment env)
-  "Prepare to call ensure-class-using-class"
+  "prepare to call ensure-class-using-class"
   (declare (ignore env))
   (declare (special options-seen slots-seen))
   (assert (and table-name
@@ -251,20 +280,49 @@ its job"
 	       (error 'invalid-table-name :name table-name))
   (setf options-seen nil
 	slots-seen nil)
-    `(let ((canonicalized-supers ,(mapcar #'canonicalize-table-super table-supers))
-	   (canonicalized-slots ',(mapcar #'canonicalize-table-slot slots))
-	   (canonicalized-options ,(mapcar #'canonicalize-option table-options)))
-       (apply #'closer-mop:ensure-class-using-class
-	      ,(find-class table-name nil)
-	      ',table-name
-	     :direct-superclasses canonicalized-supers
-	     :direct-slots canonicalized-slots
-	     :metaclass 'square-table-class
-	     canonicalized-options)))
+    (let ((canonicalized-supers (mapcar #'canonicalize-table-super table-supers))
+	   (canonicalized-slots (mapcar #'canonicalize-table-slot slots))
+	   (canonicalized-options (mapcar #'canonicalize-option table-options)))
+       `(defclass ,table-name (,@canonicalized-supers)
+	 (,@canonicalized-slots)
+	 (:metaclass square-table-class)
+	 ,@canonicalized-options)))
 
-(define-test def-square-table
-  (def-square-table test-table ()
-    ((row-labels-schema :names (a b c))
-     (col-labels-schema :names (a b c))))
+(define-test def-square-table-macro
+    (assert-expands (defclass test-table ()
+		    ((row-labels-schema :names (a b c)
+					:comparator #'char<)
+		     (col-labels-schema :names (1 2 3)))
+		    (:metaclass square-table-class)
+		    (:documentation "Test table for unit tests")
+		    (:value-normalizer #'floor))
+		  (def-square-table test-table ()
+		    ((row-labels-schema :names (a b c)
+					:comparator #'char<)
+		     (col-labels-schema :names (1 2 3)))
+		    (:documentation "Test table for unit tests")
+		    (:value-normalizer #'floor)))
+  (assert-expands (defclass test-table ()
+		    ((row-labels-schema :names (a b c)
+					:comparator #'char<)
+		     (col-labels-schema :names (1 2 3)))
+		    (:metaclass square-table-class)
+		    (:documentation "Test table for unit tests")
+		    (:value-normalizer #'floor))
+		  (def-square-table test-table ()
+		    ((row-labels-schema :names (a b c)
+					:comparator #'char<)
+		     (col-labels-schema :names (1 2 3)))
+		    (:documentation "Test table for unit tests")
+		    (:value-normalizer #'floor)))
+  #+test-does-not-capture-error
+  (assert-error 'duplicate-table-slot-option 
+		  (def-square-table test-table ()
+		    ((row-labels-schema :names (a b c)
+					:comparator #'char<
+					:comparator #'char>)
+		     (col-labels-schema :names (1 2 3)))
+		    (:documentation "Test table for unit tests")
+		    (:value-normalizer #'floor))))
 
 
